// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs generate should accept pages it just wrote 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "CLI documentation in <sandbox>/docs is up to date (14 pages)",
  ],
}
`;

exports[`docs generate should generate a page per command group 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Generated 14 documentation pages in <sandbox>/docs",
  ],
}
`;

exports[`docs generate should reject pages that drifted 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "CLI documentation in <sandbox>/drifted is stale, regenerate it with 'xrf-cli docs generate':",
    "  outdated: README.md",
    "  missing: archive.md",
    "  missing: dialog.md",
    "  missing: docs.md",
    "  missing: externs.md",
    "  missing: gamedata.md",
    "  missing: ltx.md",
    "  missing: ogf.md",
    "  missing: omf.md",
    "  missing: particle.md",
    "  missing: spawn.md",
    "  missing: texture.md",
    "  missing: thm.md",
    "  missing: translation.md",
    "Check failed: 14 finding(s)",
  ],
  "stdout": [],
}
`;

exports[`docs generate should write the expected pages 1`] = `
[
  {
    "path": "docs/README.md",
    "sha256": "bc36b41a2694612924c265ac109fe53184f8e3b12a4230877e90bbf91b29473b",
    "size": 2679,
  },
  {
    "path": "docs/archive.md",
    "sha256": "42413070d5b39963e8c4c17d0c69079609e90cef340e106a0785258ac94709ed",
    "size": 5775,
  },
  {
    "path": "docs/dialog.md",
    "sha256": "a3d42f7b0b46a139b4699493e45aa10c9c989e10f566395658ff29e009c8fc80",
    "size": 1280,
  },
  {
    "path": "docs/docs.md",
    "sha256": "109f601e4a0358f8f5036ba19b884dc43c01d859a4afa88a0651be632541a885",
    "size": 834,
  },
  {
    "path": "docs/externs.md",
    "sha256": "ceed6ee92388eb728cd534f999d804010c49c955e0fe97be29879c7861b6f8bf",
    "size": 1150,
  },
  {
    "path": "docs/gamedata.md",
    "sha256": "bdd171a2d7bcb2529125cd5cf52b57fddb1170c2c22c75ec1b742476923111bb",
    "size": 2231,
  },
  {
    "path": "docs/ltx.md",
    "sha256": "1f140f874f4d0dad9c9f60aa7d83612dfd2518e738aecdddafa9333c25d3dc0f",
    "size": 1352,
  },
  {
    "path": "docs/ogf.md",
    "sha256": "4e5bedd4ed535c87c1a6bb07f34770affd4c6580f57a88777461bc0ac56661a3",
    "size": 3134,
  },
  {
    "path": "docs/omf.md",
    "sha256": "f852867c096a20bcac195302a34ce272cc108f456c0ac91695bff54d5cd3093b",
    "size": 4125,
  },
  {
    "path": "docs/particle.md",
    "sha256": "4600f089a99cd6b4295520d366d8b384261547762d5a7c41544f050e5af46092",
    "size": 4107,
  },
  {
    "path": "docs/spawn.md",
    "sha256": "facf9c9ad32c58a712cd130c27f926a2460c697ba42ff34e632009d26e81bc21",
    "size": 3294,
  },
  {
    "path": "docs/texture.md",
    "sha256": "9f8de421bfec843b4f2d4b7b3c8a3c904da318c91c53f40cbec23386e328ac21",
    "size": 6260,
  },
  {
    "path": "docs/thm.md",
    "sha256": "1d53459b0493afb70fa2e0609d0cbdc7b5957b131fbcfbbb2d3c0a51b9a95098",
    "size": 1167,
  },
  {
    "path": "docs/translation.md",
    "sha256": "2524184306c788eff2892befafe447eda2efa064dfb0ba98e698501be336252c",
    "size": 3935,
  },
  {
    "path": "drifted/README.md",
    "sha256": "35db1bffa5ee9c9e44e31d2688bf494f0087c6e21f4d2e39393914acd793cae4",
    "size": 25,
  },
]
`;
